--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
     "vue-multianalytics": "^1.10.0"
   },
   "devDependencies": {
-    "nuxt-module-builder": "latest"
+    "nuxt-module-builder": "^0.0.2"
   }
 }
